Layout overhaul continues

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -22,3 +22,12 @@
     transition: none;
     display: none;
 }
+
+.DateInput_input{
+    font-weight: inherit  !important ;
+    font-size: inherit  !important     ;
+}
+
+.nav-link {
+    color: black !important;
+}
